<resources>
    <string name="app_name">Ride Atlanta</string>
    <string name="app_email">andrewvora.apps@gmail.com</string>

    <string name="title_tab_buses">Buses</string>
    <string name="title_tab_trains">Trains</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_fav_routes">Favorites</string>
    <string name="title_tab_notifications">Alerts</string>

    <string name="text_subject_feedback">Ride Atlanta Feedback</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_breeze_balance">Check Breeze Balance</string>
    <string name="menu_report_incident">Report Incident</string>

    <string name="title_see_and_say">See &amp; Say</string>
    <string name="text_about_see_and_say">
        Discreetly report suspicious activity and persons directly to the MARTA police.
    </string>
    <string name="text_see_and_say_disclaimer">
        See &amp; Say is not for emergencies. Call 911 in the case of an emergency!
    </string>
    <string name="phone_number_see_and_say">404–848–4911</string>
    <string name="sms_number_see_and_say">404–334–5355</string>
    <string name="text_report_options">How do you want to submit your report?</string>
    <string name="text_report_via_call">Call</string>
    <string name="text_report_via_text">SMS Text Message</string>

    <string name="text_see_and_say">Notice something suspicious? Report it!</string>
    <string name="button_see_and_say">Learn More</string>
    <string name="button_tips">Go to Favorites</string>

    <string name="content_description_toolbar_icon">
        Icon of the current page. Press to see additional options.
    </string>

    <string name="content_description_favorite_route">
        Click to favorite route.
    </string>

    <string name="text_adherence_unknown">
        Unknown
    </string>

    <string name="text_bus_adherence_suffix_on_time">
        On time
    </string>

    <string name="text_bus_adherence_suffix_early">
        min(s) early
    </string>

    <string name="text_bus_adherence_suffix_late">
        min(s) late
    </string>

    <string name="text_no_buses_running">
        There are no running buses
    </string>

    <string name="text_no_trains_running">
        There are no running trains
    </string>

    <string name="text_no_favorited_routes">
        You haven\'t favorited any routes, yet
    </string>
    <string name="menu_feedback">Send App Feedback</string>
    <string name="menu_sort">Sort</string>

    <string name="direction_west">West</string>
    <string name="direction_east">East</string>
    <string name="direction_north">North</string>
    <string name="direction_south">South</string>
    <string name="direction_unknown">Unknown</string>

    <string name="error_refresh_buses">Could not fetch bus info. Try again.</string>
    <string name="error_load_notifications">Could not load notifications.</string>
    <string name="error_could_not_favorite_bus">Could not update favorites.</string>
    <string name="error_load_favorites">Could not load favorites.</string>
    <string name="error_unfavorite">Could not remove from favorites.</string>
    <string name="error_loading_trains">Could not fetch train info. Try again.</string>
    <string name="error_could_not_favorite_train">Could not update favorites.</string>

    <string name="label_destination">Next destination</string>
    <string name="label_arrival_in">Arrives in</string>
    <string name="label_status">Status</string>

    <string name="bus_vehicle_id_template">Vehicle ID: %1$d</string>
    <string name="train_arrival_time_template">\@ %1$s</string>
</resources>
