<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
        android:elevation="8dp"
        app:contentInsetStart="0dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                style="@style/BaseTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/text_about_see_and_say"/>

            <TextView
                style="@style/BaseTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="12sp"
                android:text="@string/text_see_and_say_disclaimer"/>

            <TextView
                style="@style/BaseTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/text_report_options"/>

            <Button
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/see_say_text_police"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="12dp"
                android:gravity="start|center_vertical"
                android:textSize="16sp"
                android:text="@string/text_report_via_text"/>

            <TextView
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/see_say_call_police"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:textSize="16sp"
                android:text="@string/text_report_via_call"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>